; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_sysdir.c_git_sysdir_global_init.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_sysdir.c_git_sysdir_global_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (i32*)*, i32 }

@git_sysdir__dirs = common dso_local global %struct.TYPE_3__* null, align 8
@git_sysdir_global_shutdown = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_sysdir_global_init() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  store i64 0, i64* %1, align 8
  br label %3

3:                                                ; preds = %24, %0
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %11, label %6

6:                                                ; preds = %3
  %7 = load i64, i64* %1, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** @git_sysdir__dirs, align 8
  %9 = call i64 @ARRAY_SIZE(%struct.TYPE_3__* %8)
  %10 = icmp ult i64 %7, %9
  br label %11

11:                                               ; preds = %6, %3
  %12 = phi i1 [ false, %3 ], [ %10, %6 ]
  br i1 %12, label %13, label %27

13:                                               ; preds = %11
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** @git_sysdir__dirs, align 8
  %15 = load i64, i64* %1, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i64 %15
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32 (i32*)*, i32 (i32*)** %17, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** @git_sysdir__dirs, align 8
  %20 = load i64, i64* %1, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i64 %20
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  %23 = call i32 %18(i32* %22)
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %13
  %25 = load i64, i64* %1, align 8
  %26 = add i64 %25, 1
  store i64 %26, i64* %1, align 8
  br label %3

27:                                               ; preds = %11
  %28 = load i32, i32* @git_sysdir_global_shutdown, align 4
  %29 = call i32 @git__on_shutdown(i32 %28)
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i64 @ARRAY_SIZE(%struct.TYPE_3__*) #1

declare dso_local i32 @git__on_shutdown(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
